implementing upper header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,25 @@
         </nav>
     </div>
     <div class="right">
-        placeholder
+        <div class="header">
+            <div class="upper">
+                <div class="search-bar">
+                    <label for="search"><img src="./icons/magnify.svg" alt="" class="nav-icon"></label>
+                    <input type="text" name="search" id="search">
+                </div>
+                <div class="personal">
+                    <img src="./icons/bell-ring-outline.svg" alt="" class="nav-icon">
+                    <img src="./icons/profile-pic.png" alt="" class="profile-pic">
+                    <div class="name">
+                        Morgan Oakley
+                    </div>
+                </div>
+            </div>
+            <div class="action"></div>
+        </div>
+        <div class="content">
+            text.
+        </div>
     </div>
 </body>
 </html>
