--- a/index.html
+++ b/index.html
@@ -46,7 +46,20 @@
                     </div>
                 </div>
             </div>
-            <div class="action"></div>
+            <div class="lower">
+                <img src="./icons/profile-pic.png" alt="" class="profile-pic">
+                <div class="greeting">
+                    Hi there,
+                    <div class="name">
+                        Morgan Oakley (@morgan)
+                    </div>
+                </div>
+                <ul class="actions">
+                    <li><button>New</button></li>
+                    <li><button>Upload</button></li>
+                    <li><button>Share</button></li>
+                </ul>
+            </div>
         </div>
         <div class="content">
             text.
