--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="left">
         <div class="dashboard-title">
@@ -15,19 +17,28 @@
         </div>
         <nav>
             <ul>
-                <li id="home"><a href="./index.html"><img src="./icons/home.svg" alt="" class="nav-icon">Home</img></a></li>
-                <li id="profile"><a href="./index.html"><img src="./icons/profile.svg" alt="" class="nav-icon">Profile</img></a></li>
-                <li id="messages"><a href="./index.html"><img src="./icons/message.svg" alt="" class="nav-icon">Messages</img></a></li>
-                <li id="history"><a href="./index.html"><img src="./icons/clock.svg" alt="" class="nav-icon">History</img></a></li>
-                <li id="tasks"><a href="./index.html"><img src="./icons/note-multiple.svg" alt="" class="nav-icon">Tasks</img></a></li>
-                <li id="community"><a href="./index.html"><img src="./icons/account-group.svg" alt="" class="nav-icon">Community</img></a></li>
+                <li id="home"><a href="./index.html"><img src="./icons/home.svg" alt="" class="nav-icon">Home</img></a>
+                </li>
+                <li id="profile"><a href="./index.html"><img src="./icons/profile.svg" alt=""
+                            class="nav-icon">Profile</img></a></li>
+                <li id="messages"><a href="./index.html"><img src="./icons/message.svg" alt=""
+                            class="nav-icon">Messages</img></a></li>
+                <li id="history"><a href="./index.html"><img src="./icons/clock.svg" alt=""
+                            class="nav-icon">History</img></a></li>
+                <li id="tasks"><a href="./index.html"><img src="./icons/note-multiple.svg" alt=""
+                            class="nav-icon">Tasks</img></a></li>
+                <li id="community"><a href="./index.html"><img src="./icons/account-group.svg" alt=""
+                            class="nav-icon">Community</img></a></li>
             </ul>
         </nav>
         <nav>
             <ul>
-                <li id="settings"><a href="./index.html"><img src="./icons/cog.svg" alt="" class="nav-icon">Settings</img></a></li>
-                <li id="support"><a href="./index.html"><img src="./icons/help-box.svg" alt="" class="nav-icon">Support</img></a></li>
-                <li id="privacy"><a href="./index.html"><img src="./icons/shield-check.svg" alt="" class="nav-icon">Privacy</img></a></li>
+                <li id="settings"><a href="./index.html"><img src="./icons/cog.svg" alt=""
+                            class="nav-icon">Settings</img></a></li>
+                <li id="support"><a href="./index.html"><img src="./icons/help-box.svg" alt=""
+                            class="nav-icon">Support</img></a></li>
+                <li id="privacy"><a href="./index.html"><img src="./icons/shield-check.svg" alt=""
+                            class="nav-icon">Privacy</img></a></li>
             </ul>
         </nav>
     </div>
@@ -61,9 +72,49 @@
                 </ul>
             </div>
         </div>
-        <div class="content">
-            text.
+        <div class="main">
+            <div class="title" id="project-title">Your Projects</div>
+            <div class="projects">
+                <div class="project card"></div>
+                <div class="project card"></div>
+                <div class="project card"></div>
+            </div>
+            <div class="title" id="announcement-title">Announcements</div>
+            <div class="announcement">
+                <div class="announcement card">
+                    <div class="announcement-display">
+                        <div class="announcement-title">Site Maintainance</div>
+                        <div class="announcement-subtitle">
+                            Maecenas sed ligula sit amet lectus viverra venenatis. Aenean accumsan sagittis varius.
+                            Donec ut augue in lectus sagittis pretium. Proin finibus malesuada neque quis condimentum.
+                            Vivamus quis ultrices urna. Curabitur et mollis velit, in maximus tellus. Aenean vestibulum
+                            quis mi quis laoreet. Phasellus vel tincidunt mauris.
+                        </div>
+                    </div>
+                    <div class="announcement-display">
+                        <div class="announcement-title">Community Share Day</div>
+                        <div class="announcement-subtitle">
+                            Integer a scelerisque lectus, eget tincidunt neque. Morbi a sagittis tellus, at aliquet
+                            sapien. Sed pretium, tortor sed efficitur vestibulum, nisl justo tincidunt magna, nec tempor
+                            mi enim non erat.
+                        </div>
+                    </div>
+                    <div class="announcement-display">
+                        <div class="announcement-title">Updated Privacy Policy</div>
+                        <div class="announcement-subtitle">
+                            Donec tristique vestibulum neque id condimentum. Praesent at enim sodales, aliquet lacus ac,
+                            tincidunt dui. Ut id vulputate tellus, convallis ultricies lorem. Mauris vitae eros euismod,
+                            egestas nisi in, dapibus quam. Quisque imperdiet posuere odio quis fermentum.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="title" id="trending-title">Trending</div>
+            <div class="trending">
+                <div class="trending card"></div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
