--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
                 </div>
                 <div class="personal">
                     <img src="./icons/bell-ring-outline.svg" alt="" class="nav-icon">
-                    <img src="./icons/profile-pic.png" alt="" class="profile-pic">
+                    <img src="./profile/profile-pic.png" alt="" class="profile-pic small-img">
                     <div class="name">
                         Morgan Oakley
                     </div>
                 </div>
             </div>
             <div class="lower">
-                <img src="./icons/profile-pic.png" alt="" class="profile-pic">
+                <img src="./profile/profile-pic.png" alt="" class="profile-pic">
                 <div class="greeting">
                     Hi there,
                     <div class="name">
@@ -111,7 +111,36 @@
             </div>
             <div class="title" id="trending-title">Trending</div>
             <div class="trending">
-                <div class="trending card"></div>
+                <div class="trending card">
+                    <div class="trending-display">
+                        <img src="./profile/profile-pic2.jpeg" class="profile-pic small-img" alt="">
+                        <div class="trending-info">
+                            <div class="trending-user">@tegan</div>
+                            <div class="trending-project">World Peace Builder</div>
+                        </div>
+                    </div>
+                    <div class="trending-display">
+                        <img src="./profile/profile-pic.png" class="profile-pic small-img" alt="">
+                        <div class="trending-info">
+                            <div class="trending-user">@morgan</div>
+                            <div class="trending-project">Super Cool Project</div>
+                        </div>
+                    </div>
+                    <div class="trending-display">
+                        <img src="./profile/profile-pic3.jpg" class="profile-pic small-img" alt="">
+                        <div class="trending-info">
+                            <div class="trending-user">@kendall</div>
+                            <div class="trending-project">Life Changing App</div>
+                        </div>
+                    </div>
+                    <div class="trending-display">
+                        <img src="./profile/profile-pic4.jpg" class="profile-pic small-img" alt="">
+                        <div class="trending-info">
+                            <div class="trending-user">@alex</div>
+                            <div class="trending-project">No Traffic Maker</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
