added project card design

--- a/index.html
+++ b/index.html
@@ -75,16 +75,105 @@
         <div class="main">
             <div class="title" id="project-title">Your Projects</div>
             <div class="projects">
-                <div class="project card"></div>
-                <div class="project card"></div>
-                <div class="project card"></div>
+                <div class="project card">
+                    <div class="status progress"></div>
+                    <div class="project-display">
+                        <div class="project-title">Super Cool Project</div>
+                        <div class="project-info subtitle">
+                            Donec pulvinar placerat posuere. Etiam aliquet facilisis justo, ut sagittis tortor. Donec
+                            condimentum, risus sed rhoncus tempus, nibh augue pharetra velit.
+                        </div>
+                        <div class="project-footer">
+                            <a href="./#"><img src="./icons/star-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/eye-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/source-fork.svg" alt="" class="nav-icon"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project card">
+                    <div class="status progress"></div>
+                    <div class="project-display">
+                        <div class="project-title">Less Cool Project</div>
+                        <div class="project-info subtitle">
+                            Ut sit amet elementum odio. Sed fermentum ut mauris quis laoreet. Etiam sit amet ultricies
+                            ex. Curabitur cursus pulvinar lorem, vitae vulputate orci semper et.
+                        </div>
+                        <div class="project-footer">
+                            <a href="./#"><img src="./icons/star-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/eye-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/source-fork.svg" alt="" class="nav-icon"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project card">
+                    <div class="status stopped"></div>
+                    <div class="project-display">
+                        <div class="project-title">Impossible App</div>
+                        <div class="project-info subtitle">
+                            Cras mollis nisl molestie convallis vehicula. Suspendisse ut luctus dolor. Nam nec rutrum
+                            nunc. Suspendisse eget venenatis eros.
+                        </div>
+                        <div class="project-footer">
+                            <a href="./#"><img src="./icons/star-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/eye-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/source-fork.svg" alt="" class="nav-icon"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project card">
+                    <div class="status complete"></div>
+                    <div class="project-display">
+                        <div class="project-title">Easy Peasy App</div>
+                        <div class="project-info subtitle">
+                            Donec pulvinar placerat posuere. Etiam aliquet facilisis justo, ut sagittis tortor. Donec
+                            condimentum, risus sed rhoncus tempus, nibh augue pharetra velit.
+                        </div>
+                        <div class="project-footer">
+                            <a href="./#"><img src="./icons/star-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/eye-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/source-fork.svg" alt="" class="nav-icon"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project card">
+                    <div class="status progress"></div>
+                    <div class="project-display">
+                        <div class="project-title">Ad Blocker</div>
+                        <div class="project-info subtitle">
+                            Quisque efficitur tortor eget lectus suscipit, a auctor nunc laoreet. Suspendisse libero
+                            justo, scelerisque at iaculis id, pharetra sed leo.
+                        </div>
+                        <div class="project-footer">
+                            <a href="./#"><img src="./icons/star-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/eye-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/source-fork.svg" alt="" class="nav-icon"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project card">
+                    <div class="status progress"></div>
+                    <div class="project-display">
+                        <div class="project-title">Money Maker</div>
+                        <div class="project-info subtitle">
+                            Vivamus feugiat eleifend urna, in pellentesque tellus sagittis ac. Praesent aliquet augue
+                            quis est scelerisque tristique. Proin non nisi auctor, tincidunt lectus sodales, vehicula
+                            ante.
+                        </div>
+                        <div class="project-footer">
+                            <a href="./#"><img src="./icons/star-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/eye-plus-outline.svg" alt="" class="nav-icon"></a>
+                            <a href="./#"><img src="./icons/source-fork.svg" alt="" class="nav-icon"></a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="title" id="announcement-title">Announcements</div>
             <div class="announcement">
                 <div class="announcement card">
                     <div class="announcement-display">
                         <div class="announcement-title">Site Maintainance</div>
-                        <div class="announcement-subtitle">
+                        <div class="announcement-info subtitle text-cutoff">
                             Maecenas sed ligula sit amet lectus viverra venenatis. Aenean accumsan sagittis varius.
                             Donec ut augue in lectus sagittis pretium. Proin finibus malesuada neque quis condimentum.
                             Vivamus quis ultrices urna. Curabitur et mollis velit, in maximus tellus. Aenean vestibulum
@@ -93,7 +182,7 @@
                     </div>
                     <div class="announcement-display">
                         <div class="announcement-title">Community Share Day</div>
-                        <div class="announcement-subtitle">
+                        <div class="announcement-info subtitle text-cutoff">
                             Integer a scelerisque lectus, eget tincidunt neque. Morbi a sagittis tellus, at aliquet
                             sapien. Sed pretium, tortor sed efficitur vestibulum, nisl justo tincidunt magna, nec tempor
                             mi enim non erat.
@@ -101,7 +190,7 @@
                     </div>
                     <div class="announcement-display">
                         <div class="announcement-title">Updated Privacy Policy</div>
-                        <div class="announcement-subtitle">
+                        <div class="announcement-info subtitle text-cutoff">
                             Donec tristique vestibulum neque id condimentum. Praesent at enim sodales, aliquet lacus ac,
                             tincidunt dui. Ut id vulputate tellus, convallis ultricies lorem. Mauris vitae eros euismod,
                             egestas nisi in, dapibus quam. Quisque imperdiet posuere odio quis fermentum.
@@ -116,28 +205,28 @@
                         <img src="./profile/profile-pic2.jpeg" class="profile-pic small-img" alt="">
                         <div class="trending-info">
                             <div class="trending-user">@tegan</div>
-                            <div class="trending-project">World Peace Builder</div>
+                            <div class="trending-project subtitle">World Peace Builder</div>
                         </div>
                     </div>
                     <div class="trending-display">
                         <img src="./profile/profile-pic.png" class="profile-pic small-img" alt="">
                         <div class="trending-info">
                             <div class="trending-user">@morgan</div>
-                            <div class="trending-project">Super Cool Project</div>
+                            <div class="trending-project subtitle">Super Cool Project</div>
                         </div>
                     </div>
                     <div class="trending-display">
                         <img src="./profile/profile-pic3.jpg" class="profile-pic small-img" alt="">
                         <div class="trending-info">
                             <div class="trending-user">@kendall</div>
-                            <div class="trending-project">Life Changing App</div>
+                            <div class="trending-project subtitle">Life Changing App</div>
                         </div>
                     </div>
                     <div class="trending-display">
                         <img src="./profile/profile-pic4.jpg" class="profile-pic small-img" alt="">
                         <div class="trending-info">
                             <div class="trending-user">@alex</div>
-                            <div class="trending-project">No Traffic Maker</div>
+                            <div class="trending-project subtitle">No Traffic Maker</div>
                         </div>
                     </div>
                 </div>
